crates/tracel-mlir-rs/src/dialect/snapshots/tracel_mlir_rs__dialect__scf__tests__compile_for.snap
---
source: crates/tracel-mlir-rs/src/dialect/scf.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %c0 = arith.constant 0 : index
    %c8 = arith.constant 8 : index
    %c1 = arith.constant 1 : index
    scf.for %arg0 = %c0 to %c8 step %c1 {
    }
    return
  }
}
